# transaction-processing-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plot_results.py  run_experiments.sh
src/: ccmode.h  executor.h  occ.h  parser.h  record.h  runner.h  storage.h  twopl.h  types.h
workload1/: input1.txt  workload1.txt
workload2/: input2.txt  workload2.txt
